# workflowmcp

./: .gitignore  .linear_project.json  LICENSE  README.md  app_spec.txt  bad.yaml  example.yaml  init.sh  out.mmd  pyproject.toml
screenshots/: M2A-571-all-tests-passing.txt  M2A-571-cli-tests.txt  M2A-571-complete-verification.txt  M2A-571-feature-summary.txt  regression-test-report.txt  test1-monitor-json.txt  test1_parse_output.json  test2-monitor-prometheus.txt  test2_validate_output.txt  test3-monitor-failure.txt  test3_visualization.mmd  test4-parse-command.txt  test4_pytest_output.txt  test5-validate-command.txt  test6-pytest-results.txt  verification-feature1-test1-parse.txt  verification-feature1-test2-validate.txt  verification-summary.txt
workflow_mcp/: __init__.py  cli.py  core.py
workflow_mcp/models/: __init__.py  agent.py  workflow.py
workflow_mcp/monitoring/: __init__.py  observer.py
workflow_mcp/sdk/: __init__.py  cli.py  loader.py
workflow_mcp/sdk/skills/: __init__.py  planner.py  summarizer.py  translator.py
workflow_mcp/tests/: __init__.py  conftest.py  test_agent.py  test_monitoring.py  test_sdk.py  test_workflow.py
