[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "workflow-mcp"
version = "0.1.0"
description = "Declarative Agent Orchestration via YAML workflows"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "click>=8.0.0",
    "pyyaml>=6.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
]

[project.scripts]
workflow-mcp = "workflow_mcp.cli:cli"

[tool.setuptools.packages.find]
include = ["workflow_mcp*"]

[tool.pytest.ini_options]
testpaths = ["workflow_mcp/tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
